--- a/01_DuckDB_intro.ipynb
+++ b/01_DuckDB_intro.ipynb
@@ -10,6 +10,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://frenzy86.s3.eu-west-2.amazonaws.com/python/duckdb/data.parquet\n",
+    "!wget https://frenzy86.s3.eu-west-2.amazonaws.com/python/duckdb/data.csv"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
