--- a/02_DuckDB_parquet.ipynb
+++ b/02_DuckDB_parquet.ipynb
@@ -1968,7 +1968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "9qHYsgZOPCbh"
    },
@@ -2030,9 +2030,7 @@
     "    runtime = end_time - start_time\n",
     "\n",
     "    # Combine all chunks into a single Polars DataFrame\n",
-    "    df = pl.concat(all_chunks)\n",
-    "    # Create a LazyFrame for further processing\n",
-    "    lf = df.lazy()\n",
+    "    lf = pl.concat(all_chunks).lazy()\n",
     "\n",
     "    print(f\"\\nAnalysis completed in {runtime:.2f} seconds\")\n",
     "    print(f\"Total rows processed: {total_rows}\")\n",
